[package]
name = "rust-mq"
version = "0.1.3"
authors = ["Maksim V. <inre.storm@gmail.com>"]
description = "RustMQ is the MQTT broker written on pure Rust."
license = "MIT"
keywords      = ["MQTT", "publish", "subscribe", "broker", "pubsub"]
exclude       = [
  ".gitignore",
  ".travis.yml",
  "test/**/*",
  "tmp/**/*"
]

[workspace]
members = [
  "mqtt3",
  "mqttc",
  "netopt"
]

[[bin]]
name = "mqttc"
path = "src/bin/mqttc.rs"

[lib]
name = "rustmq"
path = "src/lib.rs"

[dependencies]
term = "0.2"
getopts = "0.2"
openssl = { version = "0.7", features = ["tlsv1_1", "tlsv1_2"] }
log = "0.3"
env_logger = "0.3"
"mqtt3" = "0.1" # { path = "mqtt3" }
"netopt" = "0.1" # { path = "netopt" }
"mqttc" = "0.1" # { path = "mqttc" }
