[package]
name = "mqttc"
version = "0.1.4"
authors = ["Maksim V. <inre.storm@gmail.com>"]
description = "Mqttc is a client for the MQTT protocol."
repository = "https://github.com/inre/rust-mq"
license = "MIT"

[features]
default = ["ssl"]
ssl = ["openssl"]

[dependencies]
log = "0.3"
rand = "0.3"
byteorder = "0.4"
mqtt3 = { path = "../mqtt3" }
url = "^1.2.4"
openssl = { version = "0.9", optional = true, features = ["v101", "v102"] }

[dev-dependencies]
env_logger = "0.3"
