[package]
name = "mqttc"
version = "0.1.4"
authors = ["Maksim V. <inre.storm@gmail.com>"]
description = "Mqttc is a client for the MQTT protocol."
repository = "https://github.com/inre/rust-mq"
license = "MIT"

[features]
default = ["ssl"]
ssl = ["netopt/ssl"]

[dependencies]
log = "0.4"
rand = "0.6"
byteorder = "0.5"
mqtt3 = "0.1" # { path = "../mqtt3" }
netopt = { version = "0.1.3", default-features = false } # { path = "../netopt" }

[dev-dependencies]
env_logger = "0.6"
