[package]
name = "netopt"
version = "0.1.0"
authors = ["Maksim V. <inre.storm@gmail.com>"]
description = "Provides options to work with tcp or ssl streams and has a choice in between."
repository = "https://github.com/inre/rust-mq"
license = "MIT"

[features]
default = ["ssl"]
ssl = ["openssl"]

[dependencies]
openssl = { version = "0.7", optional = true }
mqtt3 = "0.1"
